# ai_standardizer

./: .coverage  .coveragerc  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md  copilot-toolbox-mcp-skills-awareness.md
app/: __init__.py  api.py  config.py  exceptions.py  graph.py  main.py
app/agents/: __init__.py  fixer.py  formatter.py  type_detector.py  validator.py
app/models/: __init__.py  schema.py
app/services/: ai_service.py  data_service.py
app/utils/: __init__.py  data_cleaner.py  logger.py
docs/: architecture.md  sequence-diagram.md  workflow-flowchart.md
models/: schema.py
scripts/: run_app.py  test_llm.py
test_results/: coverage_report.txt  test_execution_reports.txt
tests/: conftest.py  test_agents.py  test_ai_service.py  test_api.py  test_data_cleaner.py  test_fixer_agent.py  test_formatter.py  test_logger.py  test_type_detector.py  test_utils.py  test_validator.py
